load("//bazel:yacl.bzl", "yacl_cc_binary")

package(default_visibility = ["//visibility:public"])

yacl_cc_binary(
    name = "sm2_example",
    srcs = [
        "main.cc",
        "config.cc",
        "ahesm2.cc",
        "config.h",
        "public_key.h",
        "private_key.h",
        "ciphertext.h",
        "ahesm2.h",
        "t1.h",
        "t2.h"  
    ],
    deps = [
        "//yacl/crypto/ecc:spi",
        "//yacl/utils/spi",
        "//yacl/math/mpint",
        "//yacl/crypto/ecc/openssl",
        "//yacl/utils:cuckoo_index",  # 添加 cuckoo_index 依赖
    ],
)
