load("//bazel:yacl.bzl", "OMP_CFLAGS", "OMP_DEPS", "OMP_LINKFLAGS", "yacl_cc_binary", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])
cc_library(
    name = "mitccrh",
    hdrs = [
        "mitccrh.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":utils",
        "//yacl/crypto/aes:aes_opt",
        "//yacl/crypto/tools:crhash",
    ],
)









cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = ["//yacl/math/mpint:mpint",],
)



cc_library(
    name = "garbler",
    hdrs = [
        "garbler.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_library(
    name = "evaluator",
    hdrs = [
        "evaluator.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_library(
    name = "aes_128_garbler",
    hdrs = [
        "aes_128_garbler.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_library(
    name = "sha256_garbler",
    hdrs = [
        "sha256_garbler.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/crypto/block_cipher:symmetric_crypto",
        
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
        "//yacl/math/mpint"
    ],
)

cc_library(
    name = "sha256_evaluator",
    hdrs = [
        "sha256_evaluator.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_library(
    name = "aes_128_evaluator",
    hdrs = [
        "aes_128_evaluator.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_binary(
    name = "test_split",
    srcs = ["test_split.cc"],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    data = ["//yacl/io/circuit:circuit_data"],
    deps = [
        ":mitccrh",
        ":garbler",
        ":evaluator",
        ":sha256_garbler",
        ":sha256_evaluator",
        ":aes_128_evaluator",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

cc_binary(
    name = "gc_test",
    srcs = ["gc_test.cc"],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    data = ["//yacl/io/circuit:circuit_data"],
    deps = [
        ":mitccrh",
        ":garbler",
        ":evaluator",
        ":sha256_garbler",
        ":sha256_evaluator",
        ":aes_128_evaluator",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/crypto/tools:prg",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/io/stream:file_io",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/link:test_util",
        "//yacl/utils:circuit_executor",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

