load("@yacl//bazel:yacl.bzl", "yacl_cc_binary", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "mitccrh",
    hdrs = [
        "mitccrh.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":utils",
        "//yacl/base:int128",
        "//yacl/crypto/aes:aes_opt",
        "//yacl/crypto/tools:crhash",
    ],
)

yacl_cc_library(
    name = "utils",
    hdrs = ["utils.h"],
    deps = ["//yacl/math/mpint:mpint",],
)

yacl_cc_library(
    name = "aes_128_garbler",
    hdrs = [
        "aes_128_garbler.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/base:int128",
        "//yacl/crypto/rand",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

yacl_cc_library(
    name = "sha256_garbler",
    hdrs = [
        "sha256_garbler.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:int128",
        "//yacl/crypto/block_cipher:symmetric_crypto",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/io/circuit:bristol_fashion",
    ],
)

yacl_cc_library(
    name = "sha256_evaluator",
    hdrs = [
        "sha256_evaluator.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:int128",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/io/circuit:bristol_fashion",
    ],
)

yacl_cc_library(
    name = "aes_128_evaluator",
    hdrs = [
        "aes_128_evaluator.h",
    ],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    deps = [
        ":mitccrh",
        "//yacl/base:int128",
        "//yacl/base:byte_container_view",
        "//yacl/base:dynamic_bitset",
        "//yacl/crypto/rand",
        "//yacl/io/circuit:bristol_fashion",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:iknp_ote",
        "//yacl/kernel:ot_kernel",
        "//yacl/kernel/type:ot_store_utils",
    ],
)

yacl_cc_test(
    name = "gc_test",
    srcs = ["gc_test.cc"],
    copts = [
        "-mavx",
        "-maes",
        "-mpclmul",
    ],
    data = ["//yacl/io/circuit:circuit_data"],
    deps = [
        ":sha256_garbler",
        ":sha256_evaluator",
        ":aes_128_evaluator",
        ":aes_128_garbler",
        "//yacl/crypto/block_cipher:symmetric_crypto",
    ],
)