# Copyright 2024 Guowei Ling.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "hesm2",
    srcs = [
        "ahesm2.cc",
        "config.cc",
    ],
    hdrs = [
        "ahesm2.h",
        "ciphertext.h",
        "config.h",
        "private_key.h",
        "public_key.h",
        "t1.h",
        "t2.h",
    ],
    deps = [
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/ecc/openssl",
        "@yacl//yacl/math/mpint",
        "@yacl//yacl/utils:cuckoo_index",
        "@yacl//yacl/utils/spi",
    ],
)

yacl_cc_test(
    name = "serialization_test",
    srcs = ["serialization_test.cc"],
    deps = [
        ":hesm2",
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/ecc/openssl",
        "@yacl//yacl/math/mpint",
        "@yacl//yacl/utils/spi",
    ],
)

yacl_cc_test(
    name = "hesm2_test",
    srcs = ["hesm2_test.cc"],
    deps = [
        ":hesm2",
        "@yacl//yacl/crypto/ecc:spi",
        "@yacl//yacl/crypto/ecc/openssl",
        "@yacl//yacl/math/mpint",
        "@yacl//yacl/utils/spi",
    ],
)
