# Copyright 2024 zhangwfjh
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:yacl.bzl", "AES_COPT_FLAGS", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "krtw19_psu",
    srcs = [
        "krtw19_psu.cc",
    ],
    hdrs = [
        "krtw19_psu.h",
    ],
    copts = AES_COPT_FLAGS,
    deps = [
        "//yacl/base:exception",
        "//yacl/base:int128",
        "//yacl/crypto/hash:hash_utils",
        "//yacl/crypto/rand",
        "//yacl/kernel/algorithms:base_ot",
        "//yacl/kernel/algorithms:kkrt_ote",
        "//yacl/kernel/algorithms:softspoken_ote",
        "//yacl/link",
        "//yacl/math/f2k",
        "@com_google_absl//absl/types:span",
    ],
)

yacl_cc_test(
    name = "krtw19_psu_test",
    srcs = ["krtw19_psu_test.cc"],
    deps = [":krtw19_psu"],
)
