# Copyright 2022 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test")

package(default_visibility = ["//visibility:public"])

yacl_cc_library(
    name = "pedersen_commit",
    hdrs = [
        "pedersen_commit.h",
    ],
    deps = [
        ":sigma_owh",
        "@yacl//yacl/crypto/hash:hash_utils",
    ],
)

yacl_cc_test(
    name = "pedersen_commit_test",
    srcs = ["pedersen_commit_test.cc"],
    deps = [
        ":pedersen_commit",
    ],
)

yacl_cc_library(
    name = "sigma",
    srcs = ["sigma.cc"],
    hdrs = [
        "sigma.h",
    ],
    deps = [
        ":sigma_owh",
        "@yacl//yacl/crypto/tools:ro",
        "@yacl//yacl/utils:parallel",
    ],
)

yacl_cc_test(
    name = "sigma_test",
    srcs = ["sigma_test.cc"],
    deps = [
        ":sigma",
        "@yacl//yacl/crypto/rand",
    ],
)

yacl_cc_library(
    name = "sigma_config",
    srcs = ["sigma_config.cc"],
    hdrs = [
        "sigma_config.h",
    ],
    deps = [
        "@yacl//yacl/crypto/ecc",
        "@yacl//yacl/crypto/hash:hash_interface",
    ],
)

yacl_cc_library(
    name = "sigma_owh",
    srcs = ["sigma_owh.cc"],
    hdrs = [
        "sigma_owh.h",
    ],
    deps = [
        ":sigma_config",
        "@yacl//yacl/crypto/rand",
    ],
)

yacl_cc_library(
    name = "sumcheck",
    srcs = ["sumcheck.cc"],
    hdrs = ["sumcheck.h"],
    deps = [
        "@yacl//yacl/crypto/rand",
        "@yacl//yacl/math/mpint"
    ],
)

yacl_cc_test(
    name = "sumcheck_test",
    srcs = ["sumcheck_test.cc"],
    deps = [
        ":sumcheck",
    ],
)

yacl_cc_library(
    name = "matmul_check",
    srcs = ["matmul_check.cc"],
    hdrs = ["matmul_check.h"],
    deps = [
        ":sumcheck",
        "@yacl//yacl/base:exception",
    ],
)

yacl_cc_test(
    name = "matmul_check_test",
    srcs = ["matmul_check_test.cc"],
    deps = [
        ":matmul_check",
        "@yacl//yacl/crypto/rand",
    ],
)